--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -10,6 +10,7 @@
     <h2 class="todo_list_title"><%= link_to todo_list.title, todo_list %></h2>
     <p class="todo_list_sub_title"><%= todo_list.description %></p>
     <%= link_to 'PDF', todo_list_path(todo_list, format: :pdf) %>
+    <%= link_to 'CSV', todo_list_path(todo_list, format: :csv) %>
   </div>
 <% end %>
 
