Add | ActiveStorage for images

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,10 @@
+<div class="text-field">    
+  <div class="col-sm-8">
+    <%= form.label "Profile photo" %>
+    <%= form.file_field :avatar %>
+  </div>
+</div>
+
 <div class="text-field">
   <%= form.label :username %>
   <%= form.text_field :username %>
