--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -9,7 +9,9 @@
  </div>
 </div>
 <div class="links">
- <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
- <%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: { confirm: "Are you sure?" } %> |
+ <%= link_to 'PDF', todo_list_path(@todo_list, format: :pdf) %> | 
+ <%= link_to 'CSV', todo_list_path(@todo_list, format: :csv) %> | 
+ <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |  
+ <%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: { confirm: "Are you sure?" } %> | 
  <%= link_to 'Back', todo_lists_path %>
 </div>
