--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div id="clearance" class="sign-up">
-  <h2><%= t(".title") %></h2>
+  <h2 class="titles">Sign up</h2>
 
   <%= form_for @user do |form| %>
     <%= render partial: '/users/form', object: form %>
@@ -8,8 +8,5 @@
       <%= form.submit %>
     </div>
 
-    <div class="other-links">
-      <%= link_to t(".sign_in"), sign_in_path %>
-    </div>
   <% end %>
 </div>
